Fix spacing of layout sections in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ html {
 .container {
   display: grid;
   height: 100vh;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: minmax(150px, 1fr) 4fr;
   grid-template-rows: 40px 1fr;
 }
 
@@ -79,6 +79,7 @@ html {
 }
 
 .main-section {
+  margin: 2vw;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
